tests/fail/elaboration/array-literal-not-supported.snap
stdout = ''
stderr = '''
error: array literal not supported
  ┌─ tests/fail/elaboration/array-literal-not-supported.fathom:3:1
  │
3 │ [] : Void
  │ ^^ expected `Void`
  │
  = expected `Void`

'''
